@@ -1,3 +1,7 @@
+2006-04-17  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_ReadGedcom.py: set author properly for GEDCOM name
+	on default source
+
 2006-04-16  Brian Matherly  <pez4brian@users.sourceforge.net>
 	* src/plugins/DescendReport.py: Don't sort children (Bug #1453010)
 
